# xor_package

./: CMakeLists.txt  package.xml
models/: xor_model.onnx  xor_model.pth
models/Datasets/: xor_calibration_data.npy  xor_dataset.py
models/saved_model/: fingerprint.pb  saved_model.pb  xor_model_dynamic_range_quant.tflite  xor_model_float16.tflite  xor_model_float32.tflite  xor_model_full_integer_quant.tflite  xor_model_full_integer_quant_with_int16_act.tflite  xor_model_integer_quant.tflite  xor_model_integer_quant_with_int16_act.tflite
srv/: XorRequest.srv
xor_package/: client_node.py  ml_node.py  sub_node.py
